<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_menu"
    app:startDestination="@id/nowPlayingFragment">

    <fragment
        android:id="@+id/movieDetailsFragment"
        android:name="com.example.moviedbFirman.view.fragments.MovieDetailsFragment"
        android:label="@string/movie_details"
        tools:layout="@layout/fragment_now_playing">
        <argument
            android:name="movieId"
            android:defaultValue="null"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nowPlayingFragment"
        android:name="com.example.moviedbFirman.view.fragments.NowPlayingFragment"
        android:label="@string/nowPlaying"
        tools:layout="@layout/fragment_now_playing">
        <action
            android:id="@+id/action_nowPlayingFragment_to_movieDetailsFragment"
            app:destination="@id/movieDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/upComingFragment"
        android:name="com.example.moviedbFirman.view.fragments.UpComingFragment"
        android:label="@string/upcoming"
        tools:layout="@layout/fragment_up_coming" >
        <action
            android:id="@+id/action_upComingFragment_to_movieDetailsFragment"
            app:destination="@id/movieDetailsFragment" />
    </fragment>
</navigation>